# Portfolio-Website

./: README.md  app.py  pyproject.toml  views.py
ml_models/: feature_columns_simulador.pkl  model_predict_simulador.py  preprocessor_simulador.pkl
static/: script.js  style.css
static/css/: olist_data_analysis.css  projetos.css
templates/: base.html  index.html  index_en.html  projetos.html
templates/projects/: credit_simulator.html  olist_data_analysis.html  postgresql.html
