[project]
name = "site-portifolio"
version = "0.1.0"
description = "Add your description here"
requires-python = "==3.13"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "flask-mail>=0.10.0",
    "gunicorn>=23.0.0",
    "joblib>=1.5.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "xgboost>=3.1.1",
]
